--- a/public/css/filament/filament/app.css
+++ b/public/css/filament/filament/app.css
@@ -759,7 +759,7 @@ select {
     margin-bottom: 1.6em;
     margin-top: 1.6em;
     padding-left: 1em;
-    quotes: "\201C" "\201D" "\2018" "\2019"
+    quotes: "\201C""\201D""\2018""\2019"
 }
 
 .prose :where(blockquote p:first-of-type):not(:where([class~=not-prose], [class~=not-prose] *)):before {
@@ -5854,4 +5854,8 @@ input:focus-visible+.\[input\:focus-visible\+\&\]\:ring-gray-950\/10 {
 .topbar {
     height: 100px;
     margin-bottom: 1rem;
+}
+
+.width-full {
+    width: 10rem;
 }
